--- a/site/index.html
+++ b/site/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>test262.fyi</title>
+  <title>porffor.test262.fyi</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <link rel="stylesheet" type="text/css" href="style.css">
-  <meta name="description" content="daily runner of test262 for many engines">
+  <meta name="description" content="deep analysis of porffor test262 results">
 </head>
 
 <body>
   <div id="sidebar">
     <div id="sidebar-contents">
       <h1 onclick="navigate('')">test262.fyi</h1>
-      <h2>daily runner of <a href="https://github.com/tc39/test262">test262</a> for <i>many</i> engines</h2>
+      <h2>deep analysis of porffor <a href="https://github.com/tc39/test262">test262</a> results</h2>
 
       <hr>
 
@@ -29,7 +29,7 @@
         generated <span id="generated_ago"></span><span id="generated_in"></span><br>
         test262 revision <a href="" id="test262_rev"></a><br>
         <br>
-        <a href="https://github.com/CanadaHonk/test262.fyi">source</a>. work in progress, not 100% accurate.
+        <a href="https://github.com/porffor/test262.fyi">source</a>. work in progress, not 100% accurate.
       </footer>
     </div>
   </div>
@@ -40,10 +40,10 @@
         <input type="checkbox" id="vertical_file_graphs">
         <label for="vertical_file_graphs">Vertical file graphs</label>
       </div>
-      <div>
+      <!-- <div>
         <input type="checkbox" checked id="hide_negligible_results">
         <label for="hide_negligible_results">Hide negligible results</label>
-      </div>
+      </div> -->
     </div>
 
     <table>
@@ -54,86 +54,31 @@
 
   <script>
     const names = {
-      v8: 'V8',
-      v8_exp: 'V8 🧪⚙️',
-      sm: 'SpiderMonkey',
-      sm_exp: 'SpiderMonkey 🧪⚙️',
-      jsc: 'JavaScriptCore',
-      hermes: 'Hermes',
-      chakra: 'ChakraCore',
-      qjs: 'QuickJS',
-      qjs_ng: 'QuickJS NG',
-      libjs: 'LibJS',
-      graaljs: 'GraalJS',
-      xs: 'XS',
-      nashorn: 'Nashorn',
-      rhino: 'Rhino',
-      engine262: 'engine262',
-      boa: 'Boa',
-      kiesel: 'Kiesel',
-      porffor: 'porffor',
-      babel: 'Babel',
-      swc: 'SWC',
-      sucrase: 'Sucrase'
+      node: 'Node',
+      bun: 'Bun',
     };
 
     const moreInfo = {
-      v8: 'Chromium\'s JS engine, also used by Node and Deno',
-      v8_exp: 'V8 with experimental options',
-      sm: 'Gecko\'s JS engine',
-      sm_exp: 'SpiderMonkey with experimental options',
-      jsc: 'WebKit\'s JS engine',
-      hermes: 'Made for and used by React Native',
-      chakra: 'Former JS engine for Edge',
-      libjs: 'JS engine from SerenityOS, also used in Ladybird browser',
-      graaljs: 'Built on GraalVM',
-      engine262: 'ECMA262 in JavaScript!',
-      nashorn: 'Old Java JS engine by Oracle',
-      rhino: 'Java JS engine by Mozilla',
-      boa: 'Experimental embeddable JS engine in Rust',
-      kiesel: 'New JS engine written in Zig',
-      porffor: 'New experimental AOT JS -> Wasm compiler, in JS',
-      babel: 'Babel 7 + core-js 3 running on Node 0.10 (ES5)',
-      swc: 'SWC + core-js 3 running on Node 0.10 (ES5)',
-      sucrase: 'Sucrase + core-js running on Node 0.10 (ES5) - for curiosity'
+      node: 'Porffor running on Node',
+      bun: 'Porffor running on Bun',
     };
 
     const shortNames = {
-      v8: 'V8',
-      v8_exp: 'V8🧪',
-      sm: 'SM',
-      sm_exp: 'SM🧪',
-      jsc: 'JSC',
-      hermes: 'Hermes',
-      chakra: 'Chakra',
-      qjs: 'QJS',
-      qjs_ng: 'QJS-NG',
-      libjs: 'LJS',
-      graaljs: 'Graal',
-      xs: 'XS',
-      nashorn: 'Nashorn',
-      rhino: 'Rhino',
-      engine262: 'e262',
-      boa: 'Boa',
-      kiesel: 'Kiesel',
-      porffor: 'porf',
-      babel: 'Babel',
-      swc: 'SWC',
-      sucrase: 'Sucrase'
+      node: 'Node',
+      bun: 'Bun',
     };
 
     const categories = {
-      babel: 'transformers',
-      swc: 'transformers',
-      sucrase: 'transformers'
+      node: 'host',
+      bun: 'host',
     };
 
-    const niceEngineOrder = [ 'v8', 'v8_exp', 'sm', 'sm_exp', 'jsc', 'hermes', 'qjs', 'qjs_ng', 'libjs', 'chakra', 'graaljs', 'xs', 'rhino', 'nashorn', 'boa', 'kiesel', 'porffor', 'engine262', 'babel', 'swc', 'sucrase' ];
+    const niceEngineOrder = [ 'node', 'bun' ];
 
     const thead = document.querySelector('thead');
     const tbody = document.querySelector('tbody');
 
-    let cwd = '', filterOutEngines = [ 'v8_exp', 'sm_exp', 'nashorn', 'boa', 'qjs_ng', 'engine262', 'kiesel', 'porffor', 'swc', 'sucrase' ], init = false;
+    let cwd = '', filterOutEngines = [], init = false;
 
     if (location.hash) {
       const [ hashCwd, hashFilter ] = decodeURI(location.hash.slice(1)).split('|');
@@ -146,7 +91,7 @@
 
     document.body.className = filterOutEngines.map(x => `no-stat-` + x).join(' ');
 
-    const makeHash = path => `#${path ?? ''}${filterOutEngines.length !== 10 ? ('|' + niceEngineOrder.filter(x => !filterOutEngines.includes(x)).join(',')) : ''}`;
+    const makeHash = path => `#${path ?? ''}${filterOutEngines.length !== 0 ? ('|' + niceEngineOrder.filter(x => !filterOutEngines.includes(x)).join(',')) : ''}`;
 
     let ignoreNextState = false;
     const updateHash = (push = false) => {
@@ -175,7 +120,7 @@
     };
 
     vertical_file_graphs.oninput = () => navigate(cwd);
-    hide_negligible_results.oninput = () => navigate(cwd);
+    // hide_negligible_results.oninput = () => navigate(cwd);
 
     const get = async url => await (await fetch(url, { cache: 'no-cache' })).json();
 
@@ -381,7 +326,7 @@
         stat.style.width = (vertical ? percent : percent / amount) + '%';
         stat._percent = percent;
 
-        if (hide_negligible_results.checked && percent < negligiblePercent && !labelFunc) continue;
+        // if (hide_negligible_results.checked && percent < negligiblePercent && !labelFunc) continue;
 
         /* stat.onmouseenter = () => {
           stat.style.cssText = `width: ${percent}% !important`;
