--- a/site/index.html
+++ b/site/index.html
@@ -57,24 +57,28 @@
       node: 'Node',
       deno: 'Deno',
       bun: 'Bun',
+      native: 'Native',
     };
 
     const moreInfo = {
       node: 'Porffor running on Node',
       deno: 'Porffor running on Deno',
       bun: 'Porffor running on Bun',
+      native: 'Porffor targetting a native binary',
     };
 
     const shortNames = {
       node: 'Node',
       deno: 'Deno',
       bun: 'Bun',
+      native: 'Native',
     };
 
     const categories = {
       node: 'host',
       deno: 'host',
       bun: 'host',
+      native: 'target'
     };
 
     const niceEngineOrder = [ 'node', 'deno', 'bun' ];
